test/positive/semicolontypes.java
;
;
;
public class semicolontypes {
    public semicolontypes() {}
};
;
;
;
