test/negative/ClassImplementsClass/B.java
package B;
public class B {
    public B() {}
}
